<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_getcash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_btn_getcash"
        app:layout_constraintBottom_toBottomOf="@+id/edit_eftpos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_total" />

    <EditText
        android:id="@+id/edit_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_total"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_eftpos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_eftpos"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edit_total"
        app:layout_constraintStart_toStartOf="@+id/edit_total"
        app:layout_constraintTop_toBottomOf="@+id/edit_total" />

    <TextView
        android:id="@+id/tv_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_cash"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_eftpos"
        app:layout_constraintStart_toStartOf="@+id/edit_eftpos"
        app:layout_constraintTop_toBottomOf="@+id/edit_eftpos" />

    <Button
        android:id="@+id/btn_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_btn_round_final"
        android:enabled="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_cash"
        app:layout_constraintEnd_toEndOf="@+id/btn_getcash"
        app:layout_constraintStart_toStartOf="@+id/btn_getcash" />

    <TextView
        android:id="@+id/tv_finalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_final"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_50s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/hint_50s_val"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edit_eftpos"
        app:layout_constraintStart_toStartOf="@+id/edit_eftpos"
        app:layout_constraintTop_toBottomOf="@+id/tv_cash" />

    <EditText
        android:id="@+id/edit_20s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_20s_val"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edit_50s"
        app:layout_constraintStart_toStartOf="@+id/edit_50s"
        app:layout_constraintTop_toBottomOf="@+id/edit_50s" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/lbl_round_guide"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_50s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_50s" />

    <TextView
        android:id="@+id/tv_whatsleft"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/lbl_round_tap"
        app:layout_constraintEnd_toEndOf="@+id/edit_20s"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/edit_20s"
        app:layout_constraintTop_toBottomOf="@+id/edit_20s" />

</android.support.constraint.ConstraintLayout>